--- a/build.gradle
+++ b/build.gradle
@@ -1,7 +1,7 @@
 buildscript {
     ext {
         compose_version = '1.2.0-alpha05'
-        wear_compose_version = '1.0.0-alpha18'
+        wear_compose_version = '1.0.0'
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
